<resources>
    <string name="app_name">ShoppingList</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="bought_question">bought?</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="bought">Bought</string>
    <string name="not_bought">Not bought</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="update">update</string>
    <string name="search">Search</string>
    <string name="sort_ascending">sort ascending</string>
    <string name="show_bought">show bought</string>
    <string name="show_not_bought">show not bought</string>
    <string name="show_all">show all</string>
    <string name="sort_descending">sort descending</string>
</resources>